<resources>
    <string name="app_name" translatable="false">Android Labs</string>
    <string name="helloText">Hello World</string>
    <string name="two" translatable="false">2</string>
    <string name="hellobtn">Change</string>
    <string name="summerText">Goodbye Summer</string>
    <string name="changeText">Text changed!</string>
    <string name="dismissText">Dismiss</string>
    <string name="channelName" translatable="false">123</string>
    <string name="btOn">Bluetooth is not on</string>
    <string name="btText">Please enable bluetooth</string>
    <string name="notifChannel" translatable="false">Notification channel description</string>
    <string name="actionText">Hello from action button</string>
    <string name="nameText" translatable="false">name</string>
    <string name="endText" translatable="false">end</string>
    <string name="startText" translatable="false">start</string>
    <string name="dTextFile" translatable="false">This will display a text file using Threads</string>
    <string name="coroutineText" translatable="false">This will display an image using coroutines</string>
    <string name="locText" translatable="false">Get location</string>
    <string name="nearText" translatable="false">Something is near...</string>
    <string name="closeText" translatable="false">Nothing is close</string>
    <string name="locationTextFormat" translatable="false">Origin latitude: %1f \n and longitude: %2f</string>
    <string name="distanceTextFormat" translatable="false">Distance from origin: %1d km</string>
    <string name="messageTextFormat" translatable="false">Please enable %1s to use this app</string>
    <string name="currentDistanceText" translatable="false">Current latitude: %1f \n and longitude: %2f</string>
    <string name="scanText" translatable="false">Scanning...</string>
    <string name="btdText" translatable="false">Device name</string>
    <string name="btdMacText" translatable="false">MAC address</string>
    <string name="btdRsText" translatable="false">RSSI</string>
</resources>