<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameText" />

    <TextView
        android:id="@+id/tvStartDuty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startText" />

    <TextView
        android:id="@+id/tvEndDuty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endText" />
    </LinearLayout>