<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TextView
        android:id="@+id/btdName"
        android:layout_width="141dp"
        android:layout_height="37dp"
        android:text="@string/btdText"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btdMac"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:text="@string/btdMacText"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btdRs"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/btdRsText"
        android:textColor="#000000"
        android:textSize="16sp" />

</LinearLayout>
